// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should render successfully 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  width: 100%;
}

.c0 .sc-AxirZ {
  color: #144658;
}

.c1 {
  width: 100%;
  height: 0.75rem;
  border-radius: 0.75rem;
  margin-bottom: 0.5rem;
  border-radius: 0;
  background: #EBF7FC;
  overflow: hidden;
}

.c2 {
  width: 100%;
  height: 100%;
  background: #32AFDC;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

<div
  class="sc-AxjAm c0"
  color="primary"
>
  <div
    class="c1"
    color="primary"
  >
    <div
      class="c2"
      color="primary"
      style="transform: translateX(-90%);"
    />
  </div>
</div>
`;

exports[`Button Snapshot should match color="warning" 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  width: 100%;
}

.c0 .sc-AxirZ {
  color: #664B00;
}

.c1 {
  width: 100%;
  height: 0.75rem;
  border-radius: 0.75rem;
  margin-bottom: 0.5rem;
  border-radius: 0;
  background: #FFF8E6;
  overflow: hidden;
}

.c2 {
  width: 100%;
  height: 100%;
  background: #FFBB00;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

<div
  class="sc-AxjAm c0"
  color="warning"
>
  <div
    class="c1"
    color="warning"
  >
    <div
      class="c2"
      color="warning"
      style="transform: translateX(-90%);"
    />
  </div>
</div>
`;
